--- a/styles/site/style.scss
+++ b/styles/site/style.scss
@@ -2,8 +2,8 @@
 // ============================================================ //
 // ============================================================ //
 
-$primary: #F03838;
-$secondary: #303030;
+$primary: #BC7AAE;
+$secondary: #403037;
 $background: #FEFEFE;
 
 /* ============================================================ */
